--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://1270.0.0.1:3306/ProyectoFinal
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/kcique_delivery
 
 spring.datasource.username = root
 spring.datasource.password =
